# Rave

./: .gitignore  CMakeLists.txt  log.txt
.cache/clangd/index/: Decoration.cpp.4A35F7FBE993F349.idx  Decoration.hpp.620FCF6C05A26E22.idx  GameManager.cpp.75FBF8C9226333FC.idx  GameManager.hpp.57E3B1F25EB70A4E.idx  Player.cpp.0C63B6804BDFAC69.idx  Player.cpp.A2EA8909F1F81576.idx  Player.hpp.4C829542F18040D1.idx  Player.hpp.C1DF6F27FC7EA359.idx  Texture.cpp.3763987C7C606F12.idx  Texture.cpp.CF504D146C23A965.idx  Texture.hpp.2E91A913741729EE.idx  Texture.hpp.40A95122ABAE678E.idx  camera.hpp.5B2D240D46157C19.idx  entities.hpp.3C5F41465B14B914.idx  entities.hpp.D935A8509664C102.idx  main.cpp.489CF5496B73DFBF.idx  main.cpp.72F58D7AEB376E9D.idx  raylib.h.5EA40D49BF8A0140.idx  raylib.h.6B7371201221B2CD.idx  vectors.hpp.4AB2D617697321D1.idx  vectors.hpp.50C7FEC929258F60.idx
Debug/: Rave
GameFr/include/: camera.hpp  entities.hpp  event.hpp
GameFr/include/util/: GFmath.hpp  Randomizer.hpp  collisionManager.hpp  vectors.hpp
art/: enemy.aseprite  explosion.aseprite  hovership.aseprite  player2.aseprite  projectile.aseprite
include/: Decoration.hpp  Enemy.hpp  GameManager.hpp  Player.hpp  Projectile.hpp  Vfx.hpp
include/util/: Globals.hpp  ObjectArray.hpp  Texture.hpp  TextureArrays.hpp
src/: Decoration.cpp  Enemy.cpp  GameManager.cpp  Player.cpp  Projectile.cpp  Vfx.cpp  main.cpp
src/util/: Texture.cpp
